# gfx

./: CMakeLists.txt
cmake/: dependencies.cmake  install.cmake  setup.cmake
include/gfx/: axis.hpp  bar_chart.hpp  bbox.hpp  brush.hpp  canvas.hpp  color.hpp  exception.hpp  font.hpp  glyph.hpp  graph.hpp  image.hpp  legend.hpp  line_graph.hpp  line_plot.hpp  markers.hpp  path.hpp  pen.hpp  plot.hpp  qt_surface.hpp  rectangle.hpp  surface.hpp  svg_document.hpp  text_layout.hpp  tics.hpp  vector.hpp  xform.hpp
include/gfx/impl/: canvas.hpp  surface.hpp
include/gfx/plot/: axis.hpp  bar_chart.hpp  color_ramp.hpp  colormap.hpp  error_bars.hpp  legend.hpp  line_plot.hpp  plot.hpp  plot_element.hpp  raster_plot.hpp  ticks.hpp
src/: CMakeLists.txt  color.cpp  image.cpp  path.cpp  pen.cpp  qt_surface.cpp  text_layout.cpp
src/impl/: canvas.cpp  exception.cpp  font_manager.cpp  font_manager.hpp  surface.cpp  text_layout_engine.cpp  text_layout_engine.hpp  text_path.cpp
src/plot/: axis.cpp  bar_chart.cpp  color_ramp.cpp  colormap.cpp  error_bars.cpp  gtk_widget.cpp  gtk_widget.hpp  legend.cpp  line_graph.cpp  line_plot.cpp  markers.cpp  plot.cpp  raster_plot.cpp  safe_queue.hpp  ticks.cpp  tics.cpp
src/svg/: base64.cpp  base64.hpp  dictionary.cpp  dictionary.hpp  string_utils.hpp  svg_document.cpp  svg_dom.cpp  svg_dom.hpp  svg_dom_attributes.hpp  svg_dom_exceptions.hpp  svg_length.cpp  svg_length.hpp  svg_parse_util.cpp  svg_parse_util.hpp  svg_parser.cpp  svg_parser.hpp  svg_render_context.cpp  svg_render_context.hpp  svg_style.cpp  svg_style.hpp  svg_style_attributes.hpp
test/: CMakeLists.txt  qt_plotter.hpp  test_basic_shapes.cpp  test_pattern.cpp  test_plot.cpp  test_qt_surface.cpp  test_show_plot.cpp  test_svg_parser.cpp  test_text_layout.cpp
